--- a/main.html
+++ b/main.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <body>
+    <div class="mainContainer">
+      <h1>Testimonials</h1>
+      <div class="testimonial">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          est maxime quia.
+        </p>
+        <p class="author">jone Doe</p>
+      </div>
+      <div class="testimonial">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          est maxime quia.
+        </p>
+        <p class="author">jone Doe</p>
+      </div>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
